--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,24 @@
     <title>Recipes</title>
 </head>
 <body>
-<div th:text="mynewtext">Text</div>
+<div th:each="recipe : ${recipes}">
+    <h2 th:text="${recipe.description}">Recipe Description</h2>
+    <p th:text="${recipe.notes.recipeNotes}">Recipe Notes</p>
+    <table>
+        <thead>
+        <tr >
+            <th colspan="3">Ingredients</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="ingredient: ${recipe.ingredients}">
+            <td th:text="${ingredient.amount}">Amount</td>
+            <td th:text="${ingredient.uom.description}">UOM</td>
+            <td th:text="${ingredient.description}">Ingredient</td>
+        </tr>
+        </tbody>
+    </table>
+    <p th:text="${recipe.directions}">Directions</p>
+</div>
 </body>
 </html>
